test/conformance/chainsaw/generating-policies/context/globalcontextentry/clusterrolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: apicall-gpol-test-reader
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: apicall-gpol-test-reader
subjects:
- kind: ServiceAccount
  name: kyverno-admission-controller
  namespace: kyverno
