test/conformance/chainsaw/generating-policies/context/globalcontextentry/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: globalcontextentry-gpol-ns
