test/conformance/chainsaw/generating-policies/context/globalcontextentry/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: globalcontextentry-gpol
spec:
  concurrent: false
  steps:
  - name: create configmap and global context entry
    try:
    - apply:
        file: configmap.yaml
    - apply:
        file: clusterrole.yaml
    - apply:
        file: clusterrolebinding.yaml
    - apply:
        file: gctxentry.yaml
    - sleep:
        duration: 3s
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-generating-policy-ready
    use:
      template: ../../../_step-templates/generating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: globalcontextentry-gpol
  - name: create namespace
    try:
    - apply:
        file: namespace.yaml
  - name: check that the configmap is generated
    try:
    - assert:
        file: downstream-assert.yaml
